--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -19,7 +19,10 @@
 {% block header %}
     {% include 'partials/_header.html.twig' %}
 {% endblock %}
-{% block body %}{% endblock %}
-{% block footer %}{% endblock %}
+{% block body %}
+{% endblock %}
+{% block footer %}
+    {% include 'partials/_footer.html.twig' %}
+{% endblock %}
 </body>
 </html>
