--- a/templates/partials/_header.html.twig
+++ b/templates/partials/_header.html.twig
@@ -10,7 +10,7 @@
             <a class="nav-link" href="#">Profil</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Annonces</a>
+            <a class="nav-link" href="{{ path('app_annonces') }}">Annonces</a>
           </li>
         </ul>
         <ul class="navbar-nav d-flex justify-content-end">
