--- a/templates/annonces/annonces.html.twig
+++ b/templates/annonces/annonces.html.twig
@@ -3,5 +3,18 @@
 {% block title %}Annonces{% endblock %}
 
 {% block body %}
-
+<div class="card mb-3 pl-4 border border-white">
+    <div class="row no-gutters">
+      <div class="col-md-4">
+        <img src={{asset('media/image.jpeg')}} class="card-img-top mx-2 my-3">
+      </div>
+      <div class="col-md-8">
+        <div class="card-body">
+          <h5 class="card-title">Titre de l'article</h5>
+          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+        </div>
+        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+      </div>
+    </div>
+  </div>
 {% endblock %}
