modif page annonce 27/10

--- a/templates/annonces/annonces.html.twig
+++ b/templates/annonces/annonces.html.twig
@@ -10,10 +10,11 @@
       </div>
       <div class="col-md-8">
         <div class="card-body">
-          <h5 class="card-title">Titre de l'article</h5>
-          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          <h5 class="card-title px-5">Titre de l'article</h5>
+          <p class="card-text px-5">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          <p class="card-text px-5 py-5 fw-bold">Publié par "Vendeur"</small></p>
+          <p class="card-text px-5"><small class="text-muted">Mise à jour le ../../.. à ..:..</small></p>
         </div>
-        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
       </div>
     </div>
   </div>
