--- a/templates/annonces/annonces.html.twig
+++ b/templates/annonces/annonces.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
 <div class="card mb-3 pl-4 border border-white">
     <div class="row no-gutters">
-      <div class="col-md-4">
+      <div class="col-md-4 ps-4">
         <img src={{asset('media/image.jpeg')}} class="card-img-top mx-2 my-3">
       </div>
       <div class="col-md-8">
