--- a/templates/annonces/annonces.html.twig
+++ b/templates/annonces/annonces.html.twig
@@ -19,5 +19,5 @@
     </div>
   </div>
 
-  <img src={{asset('media/image.jpeg')}} class="card-img-top w-25 h-25;">
+  {% include 'partials/_commentaires.html.twig' %}
 {% endblock %}
