Modif front page home 27/10 14:08

--- a/templates/pages/home.html.twig
+++ b/templates/pages/home.html.twig
@@ -4,7 +4,7 @@
 {% block title %}Accueil - La bonne affaire{% endblock %}
 
 {% block body %}
-<form class="d-flex" role="search" my-2>
+<form class="d-flex pt-4 pe-5 ps-5" role="search" my-2>
     <input class="form-control me-2" class="col-xs-4" type="search" placeholder="Chercher une annonce" aria-label="Search">
     <button class="btn btn-outline-success" type="submit"> <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" 
         fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
@@ -54,6 +54,8 @@
 
 <br>
 <hr class="featurette-divider">
+<br>
+<h5 class="fw-bold">DERNIÈRES ANNONCES POSTÉES</h5>
 <br>
     {% include 'partials/_annonce.html.twig' %}
 
