--- a/templates/pages/home.html.twig
+++ b/templates/pages/home.html.twig
@@ -57,18 +57,33 @@
 <br>
 <h5 class="fw-bold">DERNIÈRES ANNONCES POSTÉES</h5>
 <br>
-    {% include 'partials/_annonce.html.twig' %}
 
+<div class="container ps-5 pe-auto">
+  <div class="row align-items-start">
+    <div class="col">
+      {% include 'partials/_annonce.html.twig' %}
+    </div>
+    <div class="col">
+      {% include 'partials/_annonce.html.twig' %}
+    </div>
+    <div class="col">
+      {% include 'partials/_annonce.html.twig' %}
+    </div>
+  </div>
 <br>
 <br>
+  <div class="row justify-content-center">
+    <div class="col-4">
+      {% include 'partials/_annonce.html.twig' %}
+    </div>
+    <div class="col-4">
+      {% include 'partials/_annonce.html.twig' %}
+    </div>
+    <div class="col-4">
+      {% include 'partials/_annonce.html.twig' %}
+    </div>
+  </div>
 
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
 <br>
 <br>
 <br>
