--- a/templates/pages/home.html.twig
+++ b/templates/pages/home.html.twig
@@ -29,7 +29,7 @@
           </svg></svg>
           <br>
         <h2 class="fw-normal text-center">Pratique</h2>
-        <p>Redonnez un second souffle à vos articles qui ne vous servent plus</p>
+        <p class="text-center">Redonnez un second souffle à vos articles qui ne vous servent plus</p>
       </div><!-- /.col-lg-4 -->
 
       <div class="col-lg-4">
@@ -38,17 +38,17 @@
           </svg>
         <br>
         <h2 class="fw-normal text-center">Pas cher</h2>
-        <p>Des prix jusqu'à 4 fois moins chers en moyenne que le produit original</p>
+        <p class="text-center">Des prix jusqu'à 4 fois moins chers en moyenne que le produit original</p>
       </div><!-- /.col-lg-4 -->
 
       <div class="col-lg-4">
-        <svg class="bd-placeholder-img rounded-circle rounded mx-auto d-block" width="140" height="140" xmlns="<svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns=<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-clock" viewBox="0 0 16 16">
-            <path d="M8 3.5a.5.5 0 0 0-1 0V9a.5.5 0 0 0 .252.434l3.5 2a.5.5 0 0 0 .496-.868L8 8.71V3.5z"/>
-            <path d="M8 16A8 8 0 1 0 8 0a8 8 0 0 0 0 16zm7-8A7 7 0 1 1 1 8a7 7 0 0 1 14 0z"/>
-          </svg>
+        <svg class="bd-placeholder-img rounded-circle rounded mx-auto d-block" width="140" height="140" xmlns="<svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns=<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-hourglass-split" viewBox="0 0 16 16">
+          <path d="M2.5 15a.5.5 0 1 1 0-1h1v-1a4.5 4.5 0 0 1 2.557-4.06c.29-.139.443-.377.443-.59v-.7c0-.213-.154-.451-.443-.59A4.5 4.5 0 0 1 3.5 3V2h-1a.5.5 0 0 1 0-1h11a.5.5 0 0 1 0 1h-1v1a4.5 4.5 0 0 1-2.557 4.06c-.29.139-.443.377-.443.59v.7c0 .213.154.451.443.59A4.5 4.5 0 0 1 12.5 13v1h1a.5.5 0 0 1 0 1h-11zm2-13v1c0 .537.12 1.045.337 1.5h6.326c.216-.455.337-.963.337-1.5V2h-7zm3 6.35c0 .701-.478 1.236-1.011 1.492A3.5 3.5 0 0 0 4.5 13s.866-1.299 3-1.48V8.35zm1 0v3.17c2.134.181 3 1.48 3 1.48a3.5 3.5 0 0 0-1.989-3.158C8.978 9.586 8.5 9.052 8.5 8.351z"/>
+        </svg>
+
         <br>
         <h2 class="fw-normal text-center">Rapide</h2>
-        <p>L'expédition de votre article prend jusqu'à seulement 48 heures</p>
+        <p class="text-center">L'expédition de votre article prend jusqu'à seulement 48 heures</p>
       </div><!-- /.col-lg-4 -->
     </div><!-- /.row -->
 
@@ -70,19 +70,22 @@
       {% include 'partials/_annonce.html.twig' %}
     </div>
   </div>
+</div>
 <br>
 <br>
-  <div class="row justify-content-center">
-    <div class="col-4">
+<div class="container ps-5 pe-auto">
+  <div class="row align-items-start">
+    <div class="col">
       {% include 'partials/_annonce.html.twig' %}
     </div>
-    <div class="col-4">
+    <div class="col">
       {% include 'partials/_annonce.html.twig' %}
     </div>
-    <div class="col-4">
+    <div class="col">
       {% include 'partials/_annonce.html.twig' %}
     </div>
   </div>
+</div>
 
 <br>
 <br>
