--- a/templates/partials/_annonce.html.twig
+++ b/templates/partials/_annonce.html.twig
@@ -2,7 +2,9 @@
     <img src={{asset('media/image.jpeg')}}>
     <div class="card-body">
       </h2 class="card-title">Article</h2>
-      <h5 class="font-weight-bold">99€</h5>
-      <button type="button" class="btn btn-primary btn-sm">Plus d'infos</button>
+      <h5 class="font-weight-bold pb-2">99€</h5>
+      <button type="button" class="btn btn-primary btn-sm me-5">Plus d'infos</button>
+      <p class="font-weight-bold d-inline pe-2 ps-3">Pseudo34</p>
     </div>
+    
 </div>
