--- a/templates/partials/_annonce.html.twig
+++ b/templates/partials/_annonce.html.twig
@@ -1,8 +1,9 @@
 <div class="card" style="width: 18rem;">
     <img src={{asset('media/image.jpeg')}}>
     <div class="card-body">
-      </h2 class="card-title">Article</h2>
-      <h5 class="font-weight-bold pb-2">99€</h5>
+      <p class="card-title h4">Article</p>
+
+      <h5 class="font-weight-bold pb-2 mx-1 pe-2">99€</h5>
       <button type="button" class="btn btn-primary btn-sm me-5">Plus d'infos</button>
       <p class="font-weight-bold d-inline pe-2 ps-3">Pseudo34</p>
     </div>
