--- a/templates/pages/home.html.twig
+++ b/templates/pages/home.html.twig
@@ -4,9 +4,9 @@
 {% block title %}Accueil - La bonne affaire{% endblock %}
 
 {% block body %}
-<form class="d-flex pt-4 pe-5 ps-5" role="search" my-2>
-    <input class="form-control me-2" class="col-xs-4" type="search" placeholder="Chercher une annonce" aria-label="Search">
-    <button class="btn btn-outline-success" type="submit"> <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" 
+<form class="d-flex pt-4 pe-5 ps-5 ms-5" role="search" my-2>
+    <input class="form-control form-control-lg" class="col-xs-4" type="search" placeholder="Chercher une annonce" aria-label="Search">
+    <button class="btn btn-outline-success me-5 ms-5" type="submit"> <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" 
         fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
         <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
       </svg>
