--- a/templates/pages/home.html.twig
+++ b/templates/pages/home.html.twig
@@ -4,16 +4,39 @@
 {% block title %}Accueil - La bonne affaire{% endblock %}
 
 {% block body %}
-<form class="d-flex pt-4 pe-5 ps-5 ms-5" role="search" my-2>
-    <input class="form-control form-control-lg" class="col-xs-4" type="search" placeholder="Chercher une annonce" aria-label="Search">
-    <button class="btn btn-outline-success me-5 ms-5" type="submit"> <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" 
-        fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
-        <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
-      </svg>
-    </button>
-  </form>
-  
 
+
+
+<header class="bg-dark py-5">
+  <div class="container px-5">
+      <div class="row gx-5 align-items-center justify-content-center">
+          <div class="col-lg-8 col-xl-7 col-xxl-6">
+              <div class="my-5 text-center text-xl-start">
+                  <h1 class="display-5 fw-bolder text-white mb-2">Le nouveau site des bonnes affaires.</h1>
+                  <p class="lead fw-normal text-white-50 mb-4">Mobilier, prêt-à-porter, électroménagers, informatique, véhicules, immobiliers, ici tout est possible que vous soyez vendeur ou acheteur.</p>
+                  <div class="d-grid gap-3 d-sm-flex justify-content-sm-center justify-content-xl-start">
+                  </div>
+              </div>
+          </div>
+          <div class="col-xl-5 col-xxl-6 d-none d-xl-block text-center"><img class="img-fluid rounded-3 my-5" src="public/media/illustration.jpg" alt="..."></div>
+      </div>
+  </div>
+</header>
+
+<br>
+<br>
+<br>
+
+<form class="d-flex pt-4 pe-5 ps-5 ms-5" role="search" my-2>
+  <input class="form-control form-control-lg" class="col-xs-4" type="search" placeholder="Chercher une annonce" aria-label="Search">
+  <button class="btn btn-outline-success me-5 ms-5" type="submit"> <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" 
+      fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
+      <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
+    </svg>
+  </button>
+</form>
+
+<br>
 <br>
 <br>
   <div class="container marketing ps-5 pe-5">
