ajout front home 27/10 16:08

--- a/templates/pages/home.html.twig
+++ b/templates/pages/home.html.twig
@@ -18,7 +18,7 @@
                   </div>
               </div>
           </div>
-          <div class="col-xl-5 col-xxl-6 d-none d-xl-block text-center"><img class="img-fluid rounded-3 my-5" src="public/media/illustration.jpg" alt="..."></div>
+          <div class="col-xl-5 col-xxl-6 d-none d-xl-block text-center"><img class="img-fluid rounded-3 my-5" src="media/illustration.jpg" alt="..."></div>
       </div>
   </div>
 </header>
@@ -76,7 +76,10 @@
     </div><!-- /.row -->
 
 <br>
+<br>
+<br>
 <hr class="featurette-divider">
+<br>
 <br>
 <h5 class="fw-bold">DERNIÈRES ANNONCES POSTÉES</h5>
 <br>
