ajout front home 27/10 16:31

--- a/templates/pages/home.html.twig
+++ b/templates/pages/home.html.twig
@@ -79,7 +79,7 @@
 <hr class="featurette-divider">
 <br>
 <br>
-<h5 class="fw-bold">DERNIÈRES ANNONCES POSTÉES</h5>
+<p class="fs-2 fw-bold ms-3">CELA PEUT VOUS INTÉRESSER</p>
 <br>
 
 <div class="container ps-5 pe-auto">
