ajout front home 27/10 16:49

--- a/templates/partials/_header.html.twig
+++ b/templates/partials/_header.html.twig
@@ -5,7 +5,7 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
+        <ul class="navbar-nav mx-auto ms-2 mb-lg-0">
           <li class="nav-item">
             <a class="nav-link" href="#">Profil</a>
           </li>
@@ -24,4 +24,3 @@
       </div>
     </div>
 </nav>
-<br>
